[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["visheshofficial <21136428+visheshofficial@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
